--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     //fuel
     implementation 'com.github.kittinunf.fuel:fuel-android:1.15.1'
 
+    //klaxon
+    implementation 'com.beust:klaxon:3.0.1'
+
     //mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
