--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     //fuel
     implementation 'com.github.kittinunf.fuel:fuel-android:1.15.1'
 
-    //klaxon
-    implementation 'com.beust:klaxon:3.0.1'
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     //mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1'
