--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,8 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.4'
+
+    //layout
+    implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
 }
 apply plugin: 'com.google.gms.google-services'
