Wallet initial implementation completed, displsys collected coins and rates etc in recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserProfile" />
-        <activity android:name=".Wallet"></activity>
+        <activity android:name=".UserProfile"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".Wallet"
+            android:label="@string/title_activity_wallet"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
