--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+
     //GSON
     implementation 'com.google.code.gson:gson:2.8.2'
 
