Trading UI set up and working, along with backend server implementation. Currently using first 8 chars of UID as unique identifier, not totally sound but 62^8 should be enough for the magnitude of this app.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserProfile"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".UserProfile"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Wallet"
             android:label="@string/title_activity_wallet"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TradingScreen"></activity>
     </application>
 
 </manifest>
