--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="uk.ac.ed.inf.alexyz.coinz">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".CoinzHome"
             android:label="@string/app_name"
@@ -34,7 +35,8 @@
             android:name=".Wallet"
             android:label="@string/title_activity_wallet"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TradingScreen"></activity>
+        <activity android:name=".TradingScreen" />
+        <activity android:name=".Settings" />
     </application>
 
 </manifest>
