Basic settings menu implemented, removed hacks in tapbarmenu, also added popups to explain whats going on to the user on mainactivity and mapboxmain

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TradingScreen" />
         <activity android:name=".Settings" />
+        <activity android:name=".MySettings"></activity>
     </application>
 
 </manifest>
